--- a/projects.html
+++ b/projects.html
@@ -194,11 +194,12 @@ window.Quarto = {
 <section id="final-combined-design" class="level5">
 <h5 class="anchored" data-anchor-id="final-combined-design">Final Combined Design</h5>
 <p>Shown below is the layout of the final combined antenna array design, with rectangular stubs used to match both individual arrays.</p>
-
-<p>
-<embed src="Final_fullyLabeled.pdf">
-</p>
-
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="final_design.jpg" class="img-fluid figure-img"></p>
+<figcaption>Final_design</figcaption>
+</figure>
+</div>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="new4x2.jpg" class="img-fluid figure-img"></p>
@@ -211,9 +212,12 @@ window.Quarto = {
 <h4 class="anchored" data-anchor-id="results">Results</h4>
 <section id="simulations" class="level5">
 <h5 class="anchored" data-anchor-id="simulations">Simulations</h5>
+<p>The simulated results shown below were obtained using ADS keysight for the S11 parameters and Momentum for the Far Field parameters. To model the complex behavior of microwave circuits, ADS uses an approach called Method of Moments (MoM). MoM extrapolates observations in order to make some prediction, and can be used to solve deterministic or eigenvalue problems.</p>
+![Simulated_results]
 </section>
 <section id="measured" class="level5">
 <h5 class="anchored" data-anchor-id="measured">Measured</h5>
+
 </section>
 </section>
 </section>
