java project sections

--- a/projects.html
+++ b/projects.html
@@ -180,10 +180,9 @@ window.Quarto = {
    
   <ul>
   <li><a href="#vital-signs-monitoring-using-microstrip-antenna---ads-matlab" id="toc-vital-signs-monitoring-using-microstrip-antenna---ads-matlab" class="nav-link active" data-scroll-target="#vital-signs-monitoring-using-microstrip-antenna---ads-matlab"><em>Vital signs monitoring using Microstrip antenna</em> - ADS, MATLAB <br></a></li>
+  <li><a href="#multi-thread-gui-traffic-road-system-simulation---java" id="toc-multi-thread-gui-traffic-road-system-simulation---java" class="nav-link" data-scroll-target="#multi-thread-gui-traffic-road-system-simulation---java"><em>Multi-thread GUI Traffic road system simulation</em> - Java <br></a></li>
   <li><a href="#particle-swarm-optimisation---python" id="toc-particle-swarm-optimisation---python" class="nav-link" data-scroll-target="#particle-swarm-optimisation---python"><em>Particle Swarm Optimisation</em> - Python <br></a></li>
   <li><a href="#genetic-algorithm---python" id="toc-genetic-algorithm---python" class="nav-link" data-scroll-target="#genetic-algorithm---python"><em>Genetic Algorithm</em> - Python <br></a></li>
-  <li><a href="#multi-thread-gui-traffic-road-system-simulation---java" id="toc-multi-thread-gui-traffic-road-system-simulation---java" class="nav-link" data-scroll-target="#multi-thread-gui-traffic-road-system-simulation---java"><em>Multi-thread GUI Traffic road system simulation</em> - Java <br></a></li>
-  <li><a href="#chess-engine---python" id="toc-chess-engine---python" class="nav-link" data-scroll-target="#chess-engine---python"><em>Chess engine</em> - Python <br></a></li>
   </ul>
 </nav>
     </div>
@@ -242,6 +241,30 @@ window.Quarto = {
 <figcaption>Sim_results</figcaption>
 </figure>
 </div>
+</section>
+</section>
+<section id="multi-thread-gui-traffic-road-system-simulation---java" class="level3">
+<h3 class="anchored" data-anchor-id="multi-thread-gui-traffic-road-system-simulation---java"><em>Multi-thread GUI Traffic road system simulation</em> - Java <br></h3>
+<section id="project-requirements" class="level4">
+<h4 class="anchored" data-anchor-id="project-requirements"><em>Project requirements</em></h4>
+</section>
+<section id="uml" class="level4">
+<h4 class="anchored" data-anchor-id="uml"><em>UML</em></h4>
+</section>
+<section id="code-excerpts" class="level4">
+<h4 class="anchored" data-anchor-id="code-excerpts"><em>Code excerpts</em></h4>
+<section id="vehicle-class" class="level5">
+<h5 class="anchored" data-anchor-id="vehicle-class"><em>Vehicle class</em></h5>
+</section>
+<section id="multi-threaded-control-flow" class="level5">
+<h5 class="anchored" data-anchor-id="multi-threaded-control-flow"><em>Multi-threaded Control flow</em></h5>
+</section>
+<section id="gui" class="level5">
+<h5 class="anchored" data-anchor-id="gui"><em>GUI</em></h5>
+</section>
+<section id="unit-testing" class="level5">
+<h5 class="anchored" data-anchor-id="unit-testing"><em>Unit Testing</em></h5>
+</section>
 </section>
 </section>
 <section id="particle-swarm-optimisation---python" class="level3">
@@ -328,12 +351,6 @@ window.Quarto = {
 <span id="cb3-23"><a href="#cb3-23" aria-hidden="true" tabindex="-1"></a>            vector_1[i] ,vector_2[i] <span class="op">=</span> vector_2[i] ,vector_1[i]</span>
 <span id="cb3-24"><a href="#cb3-24" aria-hidden="true" tabindex="-1"></a>    <span class="cf">return</span> vector_1, vector_2</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
-</section>
-<section id="multi-thread-gui-traffic-road-system-simulation---java" class="level3">
-<h3 class="anchored" data-anchor-id="multi-thread-gui-traffic-road-system-simulation---java"><em>Multi-thread GUI Traffic road system simulation</em> - Java <br></h3>
-</section>
-<section id="chess-engine---python" class="level3">
-<h3 class="anchored" data-anchor-id="chess-engine---python"><em>Chess engine</em> - Python <br></h3>
 
 
 </section>
