--- a/index.html
+++ b/index.html
@@ -145,9 +145,13 @@ ul.task-list li input[type="checkbox"] {
 <section id="skills" class="level3">
 <h3 class="anchored" data-anchor-id="skills">Skills</h3>
 <ul>
+<li>General Programming/Misc. (Design Patterns, Big O, Algorithms and Data structures, OOP, lambdas, Unit testing, Git, TCP/IP stack )</li>
 <li>Python (Django, Keras/TenorFlow,unittest, numpy, pandas) <br></li>
 <li>Java (JUnit, Swing, Maven) <br></li>
 <li>Kotlin (Jetpack compose, Room API, Gradle) <br></li>
+<li>SQL(mySQL, ERD)</li>
+<li>XML, DTD</li>
+<li>Maths (Calculus, Geometry, Probability, Number theory, Complex Analysis)</li>
 <li>C (for embedded systems MC; Atmega328) <br></li>
 <li>Latex/Markdown (Overleaf, VScode, Quarto) <br></li>
 </ul>
@@ -155,7 +159,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="github" class="level3">
 <h3 class="anchored" data-anchor-id="github">Github</h3>
-https://github.com/HamishjHartley
+<a href="https://github.com/HamishjHartley">https://github.com/HamishjHartley</a>
 
 
 </section>
