changed some elements

--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Hi my name’s Hamish, i’m a 23 years old and Glasgow based. <br> I’m currently enrolled on the MSc Advanced Computer Science course at the University of Strathclyde. I’m interested in</p>
+<p>Hi my name’s Hamish, i’m a 23 years old and Glasgow based. <br> I’m currently enrolled on the MSc Advanced Computer Science course at the University of Strathclyde. I’m interested in network security and optimisation using artificial intelligence.</p>
 
 
 
